# Simple-C-multiplatform-App-with-shared-library

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  libimageprocessing.cpp  main.cpp
test/: CMakeLists.txt  libimageprocessing_test.cpp  main.cpp
